# docklike-plugin

./: .clang-format  .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.am.old  README.md  TODO.md  autogen.sh  build_for_bebian.sh  configure.ac  configure.ac.in  docklike.desktop  nmt.desktop  xfce4-docklike-plugin.spec
.github/workflows/: publish.yml
DEBIAN/: control
contrib/patches/: 0001-ubuntu-18.04-build-compatibility.patch
po/: Docklike.pot  POTFILES.in  de.po  el.po  el.pot  es.po  fr.po  it.po  ja.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  tr.po
src/: AppInfos.cpp  AppInfos.hpp  Config.cpp  Config.hpp  Dock.cpp  Dock.hpp  DockButton.cpp  DockButton.hpp  DockButtonMenu.cpp  DockButtonMenu.hpp  DockButtonMenuItem.cpp  DockButtonMenuItem.hpp  Group.cpp  Group.hpp  GroupMenu.cpp  GroupMenu.hpp  GroupMenuItem.cpp  GroupMenuItem.hpp  GroupWindow.cpp  GroupWindow.hpp  Helpers.cpp  Helpers.hpp  Hotkeys.cpp  Hotkeys.hpp  Makefile.am  Makefile.am.old  Plugin.cpp  Plugin.hpp  Settings.cpp  Settings.hpp  SettingsDialog.cpp  SettingsDialog.hpp  State.tpp  Store.tpp  Taskbar.cpp  Taskbar.hpp  Theme.cpp  Theme.hpp  Utility.cpp  Utility.hpp  (+13 more)
