ACLOCAL_AMFLAGS = -I m4  ${ACLOCAL_FLAGS}

SUBDIRS = src po

distclean-local:
	rm -rf *.cache *~

EXTRA_DIST = AUTHORS COPYING README.md TODO.md

DISTCLEANFILES =				\
	aclocal.m4					\
	compile						\
	configure					\
	configure.ac				\
	depcomp						\
	install-sh					\
	ltmain.sh					\
	missing						\
	mkinstalldirs				\
	intltool-extract			\
	intltool-merge				\
	intltool-update
